--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,12 +9,13 @@
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>2.1-SNAPSHOT</version>
+  <version>2.1</version>
 
   <scm>
     <connection>scm:git:https://github.com/avaje-common/avaje-classpath-scanner-api.git</connection>
     <developerConnection>scm:git:https://github.com/avaje-common/avaje-classpath-scanner-api.git</developerConnection>
     <url>https://github.com/avaje-common/avaje-classpath-scanner-api.git</url>
+    <tag>avaje-classpath-scanner-api-2.1</tag>
   </scm>
 
   <properties>
