--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
   <parent>
     <groupId>org.avaje</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>1.1</version>
+    <artifactId>java8-parent</artifactId>
+    <version>1.3</version>
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>3.1-SNAPSHOT</version>
 
   <scm>
     <connection>scm:git:https://github.com/avaje-common/avaje-classpath-scanner-api.git</connection>
@@ -17,10 +17,6 @@
     <url>https://github.com/avaje-common/avaje-classpath-scanner-api.git</url>
     <tag>HEAD</tag>
   </scm>
-
-  <properties>
-    <java.version>1.6</java.version>
-  </properties>
 
   <dependencies>
 
