--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>3.1</version>
+  <version>3.2-SNAPSHOT</version>
 
   <scm>
     <connection>scm:git:https://github.com/avaje-common/avaje-classpath-scanner-api.git</connection>
     <developerConnection>scm:git:https://github.com/avaje-common/avaje-classpath-scanner-api.git</developerConnection>
     <url>https://github.com/avaje-common/avaje-classpath-scanner-api.git</url>
-    <tag>avaje-classpath-scanner-api-3.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
