--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>3.2-SNAPSHOT</version>
+  <version>3.2</version>
 
   <scm>
     <developerConnection>scm:git:git@github.com/avaje-common/avaje-classpath-scanner-api.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>avaje-classpath-scanner-api-3.2</tag>
   </scm>
 
   <dependencies>
