--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>3.2</version>
 
   <scm>
-    <developerConnection>scm:git:git@github.com/avaje-common/avaje-classpath-scanner-api.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:avaje-common/avaje-classpath-scanner-api.git</developerConnection>
     <tag>avaje-classpath-scanner-api-3.2</tag>
   </scm>
 
