--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>3.2</version>
+  <version>3.3-SNAPSHOT</version>
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje-common/avaje-classpath-scanner-api.git</developerConnection>
