--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
   </parent>
 
   <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>3.3</version>
+  <version>3.4-SNAPSHOT</version>
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje-common/avaje-classpath-scanner-api.git</developerConnection>
-    <tag>avaje-classpath-scanner-api-3.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
