--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>io.avaje</groupId>
+  <artifactId>classpath-scanner-api</artifactId>
+  <version>4.1-SNAPSHOT</version>
+
   <parent>
     <groupId>org.avaje</groupId>
-    <artifactId>java8-parent</artifactId>
-    <version>1.3</version>
+    <artifactId>java8-oss</artifactId>
+    <version>2.1</version>
   </parent>
 
-  <artifactId>avaje-classpath-scanner-api</artifactId>
-  <version>3.4-SNAPSHOT</version>
-
   <scm>
-    <developerConnection>scm:git:git@github.com:avaje-common/avaje-classpath-scanner-api.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:avaje/classpath-scanner-api.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -20,32 +21,31 @@
 
     <dependency>
       <groupId>org.avaje.composite</groupId>
-      <artifactId>composite-testing</artifactId>
-      <version>2.1</version>
-      <type>pom</type>
+      <artifactId>junit</artifactId>
+      <version>1.1</version>
       <scope>test</scope>
     </dependency>
 
   </dependencies>
 
-  <build>
-    <plugins>
+<!--  <build>-->
+<!--    <plugins>-->
 
-      <plugin>
-        <groupId>io.repaint.maven</groupId>
-        <artifactId>tiles-maven-plugin</artifactId>
-        <version>2.15</version>
-        <extensions>true</extensions>
-        <configuration>
-          <tiles>
-            <tile>org.avaje.tile:java-compile:1.1</tile>
-            <tile>org.avaje.tile:dependency-tree:1.1</tile>
-            <tile>org.avaje.tile:pygments-doclet:1.1</tile>
-          </tiles>
-        </configuration>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>io.repaint.maven</groupId>-->
+<!--        <artifactId>tiles-maven-plugin</artifactId>-->
+<!--        <version>2.16</version>-->
+<!--        <extensions>true</extensions>-->
+<!--        <configuration>-->
+<!--          <tiles>-->
+<!--            <tile>org.avaje.tile:java-compile:1.1</tile>-->
+<!--            <tile>org.avaje.tile:dependency-tree:1.1</tile>-->
+<!--            <tile>org.avaje.tile:pygments-doclet:1.1</tile>-->
+<!--          </tiles>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
 
-    </plugins>
-  </build>
+<!--    </plugins>-->
+<!--  </build>-->
 
 </project>
