--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>classpath-scanner-api</artifactId>
-  <version>4.1-SNAPSHOT</version>
+  <version>4.1</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -14,7 +14,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje/classpath-scanner-api.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>classpath-scanner-api-4.1</tag>
   </scm>
 
   <dependencies>
