--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>classpath-scanner-api</artifactId>
-  <version>6.0-SNAPSHOT</version>
+  <version>6.0</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -27,25 +27,5 @@
     </dependency>
 
   </dependencies>
-
-<!--  <build>-->
-<!--    <plugins>-->
-
-<!--      <plugin>-->
-<!--        <groupId>io.repaint.maven</groupId>-->
-<!--        <artifactId>tiles-maven-plugin</artifactId>-->
-<!--        <version>2.16</version>-->
-<!--        <extensions>true</extensions>-->
-<!--        <configuration>-->
-<!--          <tiles>-->
-<!--            <tile>org.avaje.tile:java-compile:1.1</tile>-->
-<!--            <tile>org.avaje.tile:dependency-tree:1.1</tile>-->
-<!--            <tile>org.avaje.tile:pygments-doclet:1.1</tile>-->
-<!--          </tiles>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-
-<!--    </plugins>-->
-<!--  </build>-->
 
 </project>
