--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,16 @@
     <tag>HEAD</tag>
   </scm>
 
+  <properties>
+<!--    <java.version>11</java.version>-->
+  </properties>
+
   <dependencies>
 
     <dependency>
-      <groupId>org.avaje.composite</groupId>
+      <groupId>io.avaje</groupId>
       <artifactId>junit</artifactId>
-      <version>1.1</version>
+      <version>1.0</version>
       <scope>test</scope>
     </dependency>
 
