--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
-    <version>3.7</version>
+    <version>3.10</version>
   </parent>
 
   <groupId>io.avaje</groupId>
-  <artifactId>classpath-scanner-api</artifactId>
-  <version>7.1</version>
+  <artifactId>avaje-classpath-scanner-api</artifactId>
+  <version>7.3</version>
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje/classpath-scanner-api.git</developerConnection>
